✨ impl getRoom
