# docs/openapi/v1.yml
@@ -45,6 +45,27 @@ paths:
             schema:
               $ref: "#/components/schemas/JoinRoomRequest"
         description: 部屋の情報
+  /rooms/{roomId}:
+    get:
+      summary: getRoom
+      tags:
+        - rooms
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Room"
+      operationId: getRoom
+      description: 部屋の情報を取得する
+      parameters:
+        - name: roomId
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/RoomId"
+          description: ルームUUID
   /ping:
     get:
       summary: GET /ping
