# internal/oapi/oapi_server.go
@@ -4,6 +4,10 @@
 package oapi
 
 import (
+	"fmt"
+	"net/http"
+
+	"github.com/deepmap/oapi-codegen/pkg/runtime"
 	"github.com/labstack/echo/v4"
 )
 
@@ -18,6 +22,9 @@ type ServerInterface interface {
 	// createRoom
 	// (POST /rooms/new)
 	CreateRoom(ctx echo.Context) error
+	// getRoom
+	// (GET /rooms/{roomId})
+	GetRoom(ctx echo.Context, roomId RoomId) error
 	// GET /ws
 	// (GET /ws)
 	ConnectToWs(ctx echo.Context) error
@@ -52,6 +59,22 @@ func (w *ServerInterfaceWrapper) CreateRoom(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshalled arguments
 	err = w.Handler.CreateRoom(ctx)
+	return err
+}
+
+// GetRoom converts echo context to params.
+func (w *ServerInterfaceWrapper) GetRoom(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "roomId" -------------
+	var roomId RoomId
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "roomId", runtime.ParamLocationPath, ctx.Param("roomId"), &roomId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter roomId: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetRoom(ctx, roomId)
 	return err
 }
 
@@ -95,6 +118,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/ping", wrapper.Ping)
 	router.POST(baseURL+"/rooms/join", wrapper.JoinRoom)
 	router.POST(baseURL+"/rooms/new", wrapper.CreateRoom)
+	router.GET(baseURL+"/rooms/:roomId", wrapper.GetRoom)
 	router.GET(baseURL+"/ws", wrapper.ConnectToWs)
 
 }
